--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,10 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
-  position: absolute;
-  left: 50%;
-  top: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20vh;
 }
 
 @keyframes spin {
